language/move-lang/tests/move_check/expansion/use_function_unbound.exp
error[E03003]: unbound module member
  ┌─ tests/move_check/expansion/use_function_unbound.move:6:17
  │
2 │ module X {
  │        - Module '0x2::X' declared here
  ·
6 │     use 0x2::X::u;
  │                 ^ Invalid 'use'. Unbound member 'u' in module '0x2::X'

error[E03005]: unbound unscoped name
  ┌─ tests/move_check/expansion/use_function_unbound.move:9:9
  │
9 │         u()
  │         ^ Unbound function 'u' in current scope

