language/move-lang/tests/move_check/expansion/use_function_unbound.move
address 0x2 {
module X {
}

module M {
    use 0x2::X::u;

    fun bar() {
        u()
    }
}
}
